test/classes/initializers/phase1/hasParallelBad.good
hasParallelBad.chpl:5: In initializer:
hasParallelBad.chpl:7: error: can't initialize field "a" inside a parallel statement during phase 1 of initialization
